added flexbox file

--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -224,7 +224,7 @@
   }
 
   .nav .nav-item + .nav-item{
-    margin: var(--nav-item-margin); 
+    margin: var( 0 0 0 2rem); 
   } 
   .nav .nav-link {
     display: block;
